add movies list with scroll feature

--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,13 @@
   .netflixText {
     @apply text-[#E40914];
   }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
